--- a/app/ios/Podfile
+++ b/app/ios/Podfile
@@ -4,6 +4,8 @@
 # CocoaPods analytics sends network stats synchronously affecting flutter build latency.
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
 
+pod 'Firebase/Analytics'
+
 project 'Runner', {
   'Debug' => :debug,
   'Profile' => :release,
@@ -70,7 +72,7 @@ post_install do |installer|
         # 'PERMISSION_LOCATION=1',
        
         ## dart: PermissionGroup.notification
-        # 'PERMISSION_NOTIFICATIONS=1',
+        'PERMISSION_NOTIFICATIONS=1',
 
         ## dart: PermissionGroup.mediaLibrary
         'PERMISSION_MEDIA_LIBRARY=1',
