--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -46,11 +46,22 @@ dependencies:
   highlight_text: ^1.6.0
   avatar_glow: ^2.0.2
   url_launcher: ^6.1.8
+  firebase_messaging:
+  firebase_core:
+  overlay_support:
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons:
+
+
+flutter_icons:
+  ios: true
+  android: true
+  image_path_android: "assets/images/bot-icon.png"
+  image_path_ios: "assets/images/bot-icon.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
