--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -3,8 +3,8 @@ version: "3.7"
 services:
   fast-api:
     build: ./
-    container_name: Api-EngSpy
-    image: apiengspy
+    container_name: Api-ChatGPT
+    image: api-chatgpt
     restart: always
     ports:
       - "8081:8081"
